<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context=".MainActivity">

    <!--From here starts cardview for calculation-->
    <androidx.cardview.widget.CardView
        android:id="@+id/seeCalculation"
        android:layout_width="400dp"
        android:layout_height="220dp"
        android:backgroundTint="@color/app_background"
        android:layout_centerHorizontal="true"
        app:cardCornerRadius="30dp"
        android:layout_marginTop="60dp"
        >

        <TextView
            android:id="@+id/tvForCalculationShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:textSize="34sp"
            android:layout_marginTop="50dp"
            android:lines="1"
            />

        <EditText
            android:id="@+id/edForCalNumbers"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:textSize="45sp"
            android:hint="@string/type_here"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:inputType="number"
            android:layout_gravity="center_horizontal"
            android:lines="1"
            android:layout_marginTop="100dp"
            tools:ignore="LabelFor"
            />

    </androidx.cardview.widget.CardView>

    <!--From here starts buttons-->
    <GridLayout
        android:id="@+id/btnGrid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:layout_below="@+id/seeCalculation"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        >

        <Button
            android:id="@+id/one"
            android:layout_width="130dp"
            android:layout_height="90dp"
            android:backgroundTint="@color/btn_umber_colors"
            android:text="@string/_1"
            android:textSize="30sp"
            />

        <Button
            android:id="@+id/two"
            android:layout_width="130dp"
            android:layout_height="90dp"
            android:layout_marginStart="5dp"
            android:backgroundTint="@color/btn_umber_colors"
            android:text="@string/_2"
            android:textSize="30sp"
            />

        <Button
            android:id="@+id/three"
            android:layout_width="130dp"
            android:layout_height="90dp"
            android:layout_marginStart="5dp"
            android:backgroundTint="@color/btn_umber_colors"
            android:text="@string/_3"
            android:textSize="30sp"
            />

        <Button
            android:id="@+id/four"
            android:layout_width="130dp"
            android:layout_height="90dp"
            android:backgroundTint="@color/btn_umber_colors"
            android:text="@string/_4"
            android:textSize="30sp"
            />

        <Button
            android:id="@+id/five"
            android:layout_width="130dp"
            android:layout_height="90dp"
            android:layout_marginStart="5dp"
            android:backgroundTint="@color/btn_umber_colors"
            android:text="@string/_5"
            android:textSize="30sp"
            />

        <Button
            android:id="@+id/six"
            android:layout_width="130dp"
            android:layout_height="90dp"
            android:layout_marginStart="5dp"
            android:backgroundTint="@color/btn_umber_colors"
            android:text="@string/_6"
            android:textSize="30sp"
            />

        <Button
            android:id="@+id/seven"
            android:layout_width="130dp"
            android:layout_height="90dp"
            android:backgroundTint="@color/btn_umber_colors"
            android:text="@string/_7"
            android:textSize="30sp"
            />

        <Button
            android:id="@+id/eight"
            android:layout_width="130dp"
            android:layout_height="90dp"
            android:layout_marginStart="5dp"
            android:backgroundTint="@color/btn_umber_colors"
            android:text="@string/_8"
            android:textSize="30sp"
            />

        <Button
            android:id="@+id/nine"
            android:layout_width="130dp"
            android:layout_height="90dp"
            android:layout_marginStart="5dp"
            android:backgroundTint="@color/btn_umber_colors"
            android:text="@string/_9"
            android:textSize="30sp"
            />

        <Button
            android:id="@+id/zero"
            android:layout_width="130dp"
            android:layout_height="90dp"
            android:backgroundTint="@color/btn_umber_colors"
            android:text="@string/_0"
            android:textSize="30sp"
            />

        <Button
            android:id="@+id/mul"
            android:layout_width="130dp"
            android:layout_height="90dp"
            android:backgroundTint="@color/btn_umber_colors"
            android:layout_marginStart="5dp"
            android:text="@string/mul"
            android:textSize="30sp"
            />

        <Button
            android:id="@+id/div"
            android:layout_width="130dp"
            android:layout_height="90dp"
            android:backgroundTint="@color/btn_umber_colors"
            android:layout_marginStart="5dp"
            android:text="@string/div"
            android:textSize="30sp"
            />

        <Button
            android:id="@+id/plus"
            android:layout_width="130dp"
            android:layout_height="90dp"
            android:backgroundTint="@color/btn_umber_colors"
            android:text="@string/plus"
            android:textSize="30sp"
            />

        <Button
            android:id="@+id/minus"
            android:layout_width="130dp"
            android:layout_height="90dp"
            android:layout_marginStart="5dp"
            android:backgroundTint="@color/btn_umber_colors"
            android:text="@string/minus"
            android:textSize="30sp"
            />

        <Button
            android:id="@+id/allClear"
            android:layout_width="130dp"
            android:layout_height="90dp"
            android:backgroundTint="@color/red_ac_btn"
            android:layout_marginStart="5dp"
            android:text="@string/ac"
            android:textSize="30sp"
            />
    </GridLayout>

    <Button
        android:id="@+id/goCalculate"
        android:layout_width="400dp"
        android:layout_height="90dp"
        android:backgroundTint="@color/equals_btn"
        android:layout_marginStart="5dp"
        android:text="@string/equals"
        android:textSize="30sp"
        android:layout_below="@+id/btnGrid"
        android:layout_centerHorizontal="true"
        />

</RelativeLayout>